# taskmanager

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  runner.txt  taskmanager  tasks.db  testfile.cpp  testfilepath
include/: HttpApi.h  ITaskRepository.h  SQLiteTaskRepository.h  Task.h  TaskRepository.h  TaskService.h  httplib.h
scripts/: run_clang_tidy.sh
src/: HttpApi.cpp  SQLiteTaskRepository.cpp  Task.cpp  TaskRepository.cpp  TaskService.cpp  http_server.cpp  main.cpp
tests/: http_api_test.cpp  sqlite_task_repository_test.cpp  task_repository_test.cpp  task_service_sqlite_test.cpp  task_service_test.cpp  task_test.cpp
